# strict-soup

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
src/strict_soup/: __init__.py
strict_soup/: __init__.py
tests/: test_html_file.py  test_strict_soup.py
