[tool.poetry]
name = "strict-soup"
version = "0.1.0"
description = "Library that makes working with parsed html a little bit easier."
authors = ["ryn-cx <84663588+ryn-cx@users.noreply.github.com>"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pre-commit = "^3.6.0"
pylint = "^3.0.3"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN102", "N804"]
# ANN101 - missing-type-self - self doesn't need type hints because the type is known implicitly
# ANN102 - missing-type-cls - cls doesn't need type hints because the type is known implicitly
# N804 - non-pep604-annotation - Sometimes has false positives, and Pylance is more accurate

[tool.ruff.extend-per-file-ignores]
"test_*.py" = ["S101", "INP001"]
# S101 - assert - Assert statements are fine in tests
# INP001 - implicit-namespace-package - Tests are not packages and should not have __init__.py files
